# light-for-all-agent

./: .gitignore  AGENT.md  README.md  package-lock.json  package.json
.cargo/: config.toml
docs/: design.md  process.md
scripts/: copy-tauri-release.js  generate-icon.js
skill/: SKILL.md
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/renderer/: index.html  renderer.js  styles.css
